--- a/topografiya/templates/leader/program_works/program_work_form_re_sent_to_check.html
+++ b/topografiya/templates/leader/program_works/program_work_form_re_sent_to_check.html
@@ -150,11 +150,11 @@
                                                <h5 class="text-center"><span class="badge rounded-pill badge-primary">1</span> ОБЩИЕ ДАННЫЕ</h5>
                                              <p>
                                                    Основанием для производства работ послужило техническое задание, выданное
-                                                   <span><input class="w-50 m-b-5 formact" required name="a1_1" value="{{ form.a1_1 }}" type="text"></span>
+                                                   <span><input class="w-50 m-b-5 formact"  name="a1_1" value="{{ form.a1_1 }}" type="text"></span>
                                                    <br>
                                                    Цель, назначение и объем проектируемых работ<span><input class="m-b-5 formact" style="width: 70%" name="a1_2" value="{{ form.a1_2 }}" type="text"></span>
                                                    Дополнительные требования к выполнению геодезических работ
-                                                   <span><input class="m-b-5 formact" required name="a1_3" value="{{ form.a1_3 }}" style="width: 55%" type="text"></span>
+                                                   <span><input class="m-b-5 formact"  name="a1_3" value="{{ form.a1_3 }}" style="width: 55%" type="text"></span>
                                                </p>
                                                <div class="mb-3 row">
                                                    <label style="text-transform: lowercase;" class="col-sm-3 col-form-label"><span class="badge rounded-pill badge-primary">2</span> КРАТКАЯ ФИЗИКО-ГЕОГРАФИЧЕСКАЯ ХАРАКТЕРИСТИКА РАЙОНА РАБОТ</label>
