--- a/topografiya/templates/leader/head_komeral/show_komeral_work.html
+++ b/topografiya/templates/leader/head_komeral/show_komeral_work.html
@@ -862,9 +862,8 @@
                                 <div class="card-body">
                                     <div class="ribbon ribbon-clip ribbon-primary">8</div>
                                     <h5>Пояснительная записка<sup class="txt-danger">*</sup></h5>
-                                    <a href="{% url "object_poyasitelniy_form" id=work.object.id %}">
-                                        <button class="btn btn-outline-primary w-100">Қайта тўлдириш</button>
-                                    </a>
+                                    <button class="btn btn-primary w-100 m-t-10"><a href="#" target="_blank" class="text-white" id="doing_poyasitelniy_file" object-id="{{ work.object.id }}">Кўриш</a></button>
+
                                 </div>
                             </div>
                         </div>
@@ -874,9 +873,8 @@
                                 <div class="card-body">
                                     <div class="ribbon ribbon-clip ribbon-primary">9</div>
                                     <h5>АКТ дала назорати<sup class="txt-danger">*</sup></h5>
-                                    <a href="{% url "leader_akt_form_edit" id=work.object.id %}">
-                                        <button class="btn btn-outline-primary w-100">Қайта тўлдириш</button>
-                                    </a>
+                                     <button class="btn btn-outline-primary w-100 m-t-10" id="doing_akt_polevoy_file" akt-object-id="{{ work.object.id }}"> Кўриш</button>
+
                                 </div>
                             </div>
                         </div>
@@ -887,9 +885,8 @@
                                 <div class="card-body">
                                     <div class="ribbon ribbon-clip ribbon-primary">10</div>
                                     <h5>АКТ комерал назорати<sup class="txt-danger">*</sup></h5>
-                                    <a href="{% url "leader_akt_komeral_form_edit" id=work.object.id %}">
-                                        <button class="btn btn-outline-primary w-100">Қайта тўлдириш</button>
-                                    </a>
+                                    <button class="btn btn-outline-primary w-100 m-t-10" id="doing_akt_komeral_file" akt-object-id="{{ work.object.id }}"> Кўриш</button>
+
                                 </div>
                             </div>
                         </div>
@@ -912,6 +909,167 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script type="text/javascript">
+    $(document).on('click',".file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+        data.append("data-id", $(this).attr('data-id'));
+        {#alert($(this).attr('data-id'));#}
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'order_to_pdf' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+                window.open('/static/files/file.pdf','_blank');
+{#                var link = document.createElement('a');#}
+{#                link.href = "/static/files/file.pdf";#}
+{#                link.download = "file_" + new Date() + ".pdf";#}
+{#                link.click();#}
+{#                link.remove();#}
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
+    <script type="text/javascript">
+    $(document).on('click',"#doing_program_work_file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+        data.append("data-id", $(this).attr('programwork-id'));
+        {#alert($(this).attr('data-id'));#}
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'doing_program_work_file' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+                window.open('/static/files/program-work/program_work_file.pdf','_blank');
+{#                var link = document.createElement('a');#}
+{#                link.href = "/static/files/file.pdf";#}
+{#                link.download = "file_" + new Date() + ".pdf";#}
+{#                link.click();#}
+{#                link.remove();#}
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
+                        <script type="text/javascript">
+    $(document).on('click',"#doing_akt_polevoy_file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+         data.append("object-id", $(this).attr('akt-object-id'));
+
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'doing_akt_polevoy_file' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+                window.open('/static/files/akt_polevoy/akt-polevoy.pdf','_blank');
+{#                var link = document.createElement('a');#}
+{#                link.href = "/static/files/file.pdf";#}
+{#                link.download = "file_" + new Date() + ".pdf";#}
+{#                link.click();#}
+{#                link.remove();#}
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
+                        <script type="text/javascript">
+    $(document).on('click',"#doing_akt_komeral_file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+         data.append("data-id", $(this).attr('akt-object-id'));
+
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'doing_akt_komeral_file' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+                window.open('/static/files/akt-komeral/akt_komeral.pdf','_blank');
+{#                var link = document.createElement('a');#}
+{#                link.href = "/static/files/file.pdf";#}
+{#                link.download = "file_" + new Date() + ".pdf";#}
+{#                link.click();#}
+{#                link.remove();#}
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
+
+    <script type="text/javascript">
+    $(document).on('click',"#doing_poyasitelniy_file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+         data.append("object-id", $(this).attr('object-id'));
+
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'doing_poyasitelniy_file' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+                window.open('/static/files/poyasitelniy/poyasitelniy.pdf','_blank');
+{#                var link = document.createElement('a');#}
+{#                link.href = "/static/files/file.pdf";#}
+{#                link.download = "file_" + new Date() + ".pdf";#}
+{#                link.click();#}
+{#                link.remove();#}
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
 <script type="text/javascript">
     $(document).on('click',"#save_files",function(){
         var data = new FormData();
