--- a/topografiya/templates/oogd_reporter/report/reports.html
+++ b/topografiya/templates/oogd_reporter/report/reports.html
@@ -126,11 +126,8 @@
                                                             <div><b>Жойлашган жойи:</b> {{ object.object.pdowork.object_address}}</div>
                                                             <div class="text-end text-danger"><b>Қайтарилганлар сони:</b>
                                                                 <span style="color: #168eea;font-size:30px;">
-                                                                    {% for work in rejecteds %}
-                                                                        {% if work.object == object.object %}
-                                                                            <b  class="count" data-all="{{ work.object.id }},"></b>
-                                                                        {% endif %}
-                                                                    {% endfor %}
+<b  class="count" data-all="{% for work in rejecteds %}{% if work.object == object.object %} {{ work.object.id }},{% endif %}{% endfor %}"></b>
+
                                                                 </span>
                                                             </div>
                                                         </div>
